[gd_scene load_steps=2 format=2]

[ext_resource path="res://models/ExpBar/ExpBar.gd" type="Script" id=1]

[node name="ExpBar" type="ProgressBar"]
margin_right = 167.0
margin_bottom = 20.0
percent_visible = false
script = ExtResource( 1 )

[node name="ExpLabel" type="Label" parent="."]
margin_left = 173.0
margin_top = 3.0
margin_right = 224.0
margin_bottom = 17.0

[node name="ExpTimer" type="Timer" parent="."]

[connection signal="timeout" from="ExpTimer" to="." method="_on_ExpTimer_timeout"]
